--- a/index.html
+++ b/index.html
@@ -4,6 +4,21 @@
   <title>Examen Final</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Dancing+Script" />
+  <style type="text/css">
+  a:link {
+	text-decoration: underline;
+}
+a:visited {
+	text-decoration: underline;
+}
+a:hover {
+	text-decoration: none;
+}
+a:active {
+	text-decoration: underline;
+}
+  </style>
+<meta charset="utf-8">
 </head>  
 <body>  
   <header>
@@ -33,7 +48,7 @@
     </section>
   </div>
 
-  <div class="footer">
+<div class="footer">
     <section class="columna3"><p><strong>Contacto</strong></p>
     <p>jorge.jorge.gil@gmail.com</p>
     <p>14 calle 4-40 zona 1, Guatemala</p>
